reslove the YAMLException which occur in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ pagination_dir: page  #分页文件夹名称
 
 # Extensions  扩展
 ## Plugins: https://hexo.io/plugins/  #插件
- plugins:
+# plugins:
 #   hexo-generator-feed #RSS订阅插件
 #   hexo-generator-sitemap  #sitemap插件
 
