--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Hexo #网站标题
 subtitle: 网站副标题 #网站副标题
 description: 网站描述 #网站描述
 author: zhangdayu #
-language:
+language:zh-Hans
 timezone:
 
 # URL
