--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # Site 网站信息
 title: Hexo #网站标题
 subtitle: 网站副标题 #网站副标题
-description: 网站描述 #网站描述
-author: zhangdayu #
+description: 每天积累一点点 #网站描述
+author: zhangdayu #你的描述
 language:zh-Hans
 timezone:
 
