--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site 网站信息
-title: Hexo #网站标题
+title: Yuuu #网站标题
 subtitle: 网站副标题 #网站副标题
 description: 每天积累一点点 #网站描述
 author: zhangdayu #你的描述
