--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site 网站信息
-title: Yuuu #网站标题
+title: Yuki`s Blog #网站标题
 subtitle: 网站副标题 #网站副标题
 description: 每天积累一点点 #网站描述
-author: zhangdayu #你的描述
+author: Yuki Zhang  #你的描述
 language: zh-Hans
 timezone: UTC 
 
